--- a/config/sync/core.entity_view_display.node.content_management_system.teaser.yml
+++ b/config/sync/core.entity_view_display.node.content_management_system.teaser.yml
@@ -29,5 +29,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_link: true
+  field_logo: true
   field_representative: true
   langcode: true
