--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
+        "drupal/migrate_tools": "^4.5",
         "webflo/drupal-core-require-dev": "^8.6.0"
     },
     "conflict": {
