--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  auto_entitylabel: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -6,6 +7,7 @@ module:
   breakpoint: 0
   cer: 0
   ckeditor: 0
+  cms_garden_migrate: 0
   color: 0
   comment: 0
   config: 0
@@ -16,6 +18,7 @@ module:
   diff: 0
   dynamic_page_cache: 0
   editor: 0
+  entity: 0
   entity_limit: 0
   field: 0
   field_ui: 0
@@ -29,11 +32,15 @@ module:
   locale: 0
   mailsystem: 0
   menu_ui: 0
+  migrate: 0
+  migrate_plus: 0
+  migrate_tools: 0
   node: 0
   options: 0
   page_cache: 0
   path: 0
   path_alias: 0
+  profile: 0
   quickedit: 0
   rdf: 0
   search: 0
@@ -60,6 +67,7 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
+  claro: 0
 profile: minimal
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
