--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/entity_limit": "^2.0@alpha",
         "drupal/profile": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
+        "drupal/token": "^1.6",
         "drupal/webform": "^5.2",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
