Add chosen module

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/address": "^1.7",
         "drupal/auto_entitylabel": "^3.0@beta",
         "drupal/cer": "^4.0@alpha",
+        "drupal/chosen": "^2.9",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/diff": "^1.0@RC",
