Add chosen module config

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,8 @@ module:
   block_content: 0
   breakpoint: 0
   cer: 0
+  chosen: 0
+  chosen_lib: 0
   ckeditor: 0
   cms_garden_migrate: 0
   color: 0
