--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,7 +17,9 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  date_range_formatter: 0
   datetime: 0
+  datetime_range: 0
   dblog: 0
   diff: 0
   dynamic_page_cache: 0
