--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/date_range_formatter": "^3.1",
+        "drupal/datetime_extras": "^1.0@alpha",
         "drupal/diff": "^1.0@RC",
         "drupal/drush_locale_sync": "^2.0",
         "drupal/entity_limit": "^2.0@alpha",
