--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -19,6 +19,7 @@ module:
   contextual: 0
   date_range_formatter: 0
   datetime: 0
+  datetime_extras: 0
   datetime_range: 0
   dblog: 0
   diff: 0
