--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -26,6 +26,8 @@ module:
   dynamic_page_cache: 0
   editor: 0
   entity: 0
+  entity_browser: 0
+  entity_browser_enhanced: 0
   entity_limit: 0
   field: 0
   field_ui: 0
