Add entity_embed module and config

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/drush_locale_sync": "^2.0",
         "drupal/entity_browser": "^2.4",
         "drupal/entity_browser_enhanced": "^1.0",
+        "drupal/entity_embed": "^1.0",
         "drupal/entity_limit": "^2.0@alpha",
         "drupal/profile": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
