--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -25,9 +25,11 @@ module:
   diff: 0
   dynamic_page_cache: 0
   editor: 0
+  embed: 0
   entity: 0
   entity_browser: 0
   entity_browser_enhanced: 0
+  entity_embed: 0
   entity_limit: 0
   field: 0
   field_ui: 0
