--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -31,6 +31,7 @@ module:
   entity_browser_enhanced: 0
   entity_embed: 0
   entity_limit: 0
+  entity_usage: 0
   field: 0
   field_ui: 0
   file: 0
