Add flag module and config

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/entity_usage": "^2.0@beta",
         "drupal/field_group": "^3.0",
         "drupal/field_permissions": "^1.0@RC",
+        "drupal/flag": "^4.0@beta",
         "drupal/profile": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
