--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "drupal/field_group": "^3.0",
         "drupal/field_permissions": "^1.0@RC",
         "drupal/flag": "^4.0@beta",
+        "drupal/geolocation": "^1.11",
         "drupal/profile": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
