Add media_entity_browser module and config

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -29,6 +29,7 @@ module:
   entity: 0
   entity_browser: 0
   entity_browser_enhanced: 0
+  entity_browser_entity_form: 0
   entity_embed: 0
   entity_limit: 0
   entity_usage: 0
@@ -48,6 +49,9 @@ module:
   link: 0
   locale: 0
   mailsystem: 0
+  media: 0
+  media_entity: 0
+  media_entity_browser: 0
   menu_ui: 0
   migrate: 0
   migrate_plus: 0
