Add metatag module and config

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -53,6 +53,7 @@ module:
   media_entity: 0
   media_entity_browser: 0
   menu_ui: 0
+  metatag: 0
   migrate: 0
   migrate_plus: 0
   migrate_tools: 0
