--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/geolocation": "^1.11",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/media_entity_browser": "~2",
+        "drupal/metatag": "^1.11",
         "drupal/profile": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
