--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/media_entity_browser": "~2",
         "drupal/metatag": "^1.11",
+        "drupal/pathauto": "^1.6",
         "drupal/profile": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
