--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,6 +17,7 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  ctools: 0
   date_range_formatter: 0
   datetime: 0
   datetime_extras: 0
@@ -82,6 +83,7 @@ module:
   webform_templates: 0
   webform_ui: 0
   menu_link_content: 1
+  pathauto: 1
   content_translation: 10
   views: 10
   minimal: 1000
