--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "drupal/media_entity_browser": "~2",
         "drupal/metatag": "^1.11",
         "drupal/pathauto": "^1.6",
+        "drupal/poll": "^1.3",
         "drupal/profile": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
