--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/poll": "^1.3",
         "drupal/prepopulate": "^2.2",
         "drupal/profile": "^1.1",
+        "drupal/realname": "^1.0@RC",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
         "drupal/webform": "^5.2",
