--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "drupal/profile": "^1.1",
         "drupal/realname": "^1.0@RC",
         "drupal/redirect": "^1.5",
+        "drupal/registration_validation": "^1.2",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
         "drupal/webform": "^5.2",
