Add replicate_ui module and config

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "drupal/realname": "^1.0@RC",
         "drupal/redirect": "^1.5",
         "drupal/registration_validation": "^1.2",
+        "drupal/replicate_ui": "^1.0",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
         "drupal/webform": "^5.2",
