--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -71,6 +71,8 @@ module:
   realname: 0
   redirect: 0
   registration_validation: 0
+  replicate: 0
+  replicate_ui: 0
   search: 0
   shortcut: 0
   swiftmailer: 0
