--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "drupal/redirect": "^1.5",
         "drupal/registration_validation": "^1.2",
         "drupal/replicate_ui": "^1.0",
+        "drupal/simplify": "^1.1",
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
         "drupal/webform": "^5.2",
