--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "drupal/swiftmailer": "^1.0@beta",
         "drupal/token": "^1.6",
         "drupal/views_bulk_edit": "^2.4",
+        "drupal/views_bulk_operations": "^3.5",
         "drupal/webform": "^5.2",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
