Add views_conditional module and config

--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "drupal/token": "^1.6",
         "drupal/views_bulk_edit": "^2.4",
         "drupal/views_bulk_operations": "^3.5",
+        "drupal/views_conditional": "^1.0",
         "drupal/webform": "^5.2",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
