--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -89,6 +89,7 @@ module:
   user: 0
   views_bulk_edit: 0
   views_bulk_operations: 0
+  views_conditional: 0
   views_ui: 0
   webform: 0
   webform_templates: 0
