--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -90,6 +90,7 @@ module:
   views_bulk_edit: 0
   views_bulk_operations: 0
   views_conditional: 0
+  views_infinite_scroll: 0
   views_ui: 0
   webform: 0
   webform_templates: 0
