hexabinaer/cmsgarden#4 Add tag, cms migrations

--- a/web/modules/cms_garden_migrate/config/install/migrate_plus.migration.cms_garden_migrate_user.yml
+++ b/web/modules/cms_garden_migrate/config/install/migrate_plus.migration.cms_garden_migrate_user.yml
@@ -1,6 +1,6 @@
 id: cms_garden_migrate_user
-label: User migration
-migration_group: CMS Garden Drupal 7
+label: "User migration"
+migration_group: "CMS Garden Drupal 7"
 source:
   plugin: cms_garden_migrate_user
   key: migrate
